# word-guesser

./: Cargo.toml
examples/: benchmark.rs  gui.rs
src/: lib.rs  words.list
